Test mark_sharding autograd function call in nn.Module

--- a/autograd.ipynb
+++ b/autograd.ipynb
@@ -2,67 +2,39 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import os\n",
-    "os.environ[\"XLA_FLAGS\"] = \"--xla_dump_to=/home/bbahl/hlo\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "DEBUG running backward\n",
-      "HloModule IrToHlo.19, entry_computation_layout={()->(f32[8,8]{1,0})}\n",
-      "\n",
-      "ENTRY %IrToHlo.19 () -> (f32[8,8]) {\n",
-      "  %constant.8 = f32[] constant(0)\n",
-      "  %reshape.9 = f32[1]{0} reshape(f32[] %constant.8)\n",
-      "  %broadcast.10 = f32[1]{0} broadcast(f32[1]{0} %reshape.9), dimensions={0}\n",
-      "  %broadcast.13 = f32[8,1]{1,0} broadcast(f32[1]{0} %broadcast.10), dimensions={1}\n",
-      "  %reshape.14 = f32[8]{0} reshape(f32[8,1]{1,0} %broadcast.13)\n",
-      "  %broadcast.15 = f32[8,8]{1,0} broadcast(f32[8]{0} %reshape.14), dimensions={0}\n",
-      "  %constant.2 = f32[] constant(1)\n",
-      "  %broadcast.3 = f32[] broadcast(f32[] %constant.2), dimensions={}\n",
-      "  %reshape.4 = f32[1,1]{1,0} reshape(f32[] %broadcast.3)\n",
-      "  %broadcast.5 = f32[1,1]{1,0} broadcast(f32[1,1]{1,0} %reshape.4), dimensions={0,1}\n",
-      "  %reshape.6 = f32[] reshape(f32[1,1]{1,0} %broadcast.5)\n",
-      "  %broadcast.7 = f32[8,8]{1,0} broadcast(f32[] %reshape.6), dimensions={}\n",
-      "  %constant.1 = f32[] constant(1)\n",
-      "  %broadcast.11 = f32[8,8]{1,0} broadcast(f32[] %constant.1), dimensions={}\n",
-      "  %multiply.12 = f32[8,8]{1,0} multiply(f32[8,8]{1,0} %broadcast.7, f32[8,8]{1,0} %broadcast.11)\n",
-      "  %add.16 = f32[8,8]{1,0} add(f32[8,8]{1,0} %broadcast.15, f32[8,8]{1,0} %multiply.12)\n",
-      "  %custom-call.17 = f32[8,8]{1,0} custom-call(f32[8,8]{1,0} %add.16), custom_call_target=\"Sharding\", sharding={devices=[4,1]0,1,2,3}\n",
-      "  ROOT %tuple.18 = (f32[8,8]{1,0}) tuple(f32[8,8]{1,0} %custom-call.17)\n",
-      "}\n",
-      "\n",
-      "\n"
-     ]
-    },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/bbahl/miniconda3/envs/torchprime/lib/python3.10/site-packages/torch_xla/runtime.py:236: UserWarning: XLA_USE_SPMD is being deprecated. Use torch_xla.runtime.use_spmd() without setting XLA_USE_SPMD env-var.\n",
-      "  warnings.warn(\"XLA_USE_SPMD is being deprecated. \"\n"
+      "/home/bbahl/miniconda3/envs/torchprime/lib/python3.10/site-packages/torch_xla/__init__.py:251: UserWarning: `tensorflow` can conflict with `torch-xla`. Prefer `tensorflow-cpu` when using PyTorch/XLA. To silence this warning, `pip uninstall -y tensorflow && pip install tensorflow-cpu`. If you are in a notebook environment such as Colab or Kaggle, restart your notebook runtime afterwards.\n",
+      "  warnings.warn(\n",
+      "WARNING:root:libtpu.so and TPU device found. Setting PJRT_DEVICE=TPU.\n"
      ]
     }
    ],
    "source": [
+    "import os\n",
+    "os.environ[\"XLA_FLAGS\"] = \"--xla_dump_to=/home/bbahl/hlo\"\n",
+    "from torch import nn\n",
     "import torch\n",
     "import torch_xla\n",
     "import torch_xla.distributed.spmd as xs\n",
     "import torch_xla.runtime as xr\n",
     "\n",
     "xr.use_spmd()\n",
-    "\n",
+    "mesh = xs.get_1d_mesh('a')\n",
+    "xs.set_global_mesh(mesh)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "class MarkShardingFunction(torch.autograd.Function):\n",
     "    @staticmethod\n",
     "    def forward(ctx, input: torch.Tensor, partition_spec):\n",
@@ -70,6 +42,8 @@
     "        Forward pass: Mark the input tensor with sharding annotation.\n",
     "        \"\"\"\n",
     "        ctx.partition_spec = partition_spec\n",
+    "        mesh = xs.get_global_mesh()\n",
+    "        print(\"DEBUG running forward\")\n",
     "        xs.mark_sharding(input, mesh, partition_spec)\n",
     "        return input\n",
     "\n",
@@ -81,22 +55,71 @@
     "        \"\"\"\n",
     "        print(\"DEBUG running backward\")\n",
     "        partition_spec = ctx.partition_spec\n",
+    "        mesh = xs.get_global_mesh()\n",
     "        zero = torch.zeros((1,), device=grad_output.device, dtype=grad_output.dtype)\n",
     "        new_grad_output = zero+grad_output\n",
     "        xs.mark_sharding(new_grad_output, mesh, partition_spec)\n",
-    "        return new_grad_output, None\n",
-    "        \n",
+    "        return new_grad_output, None, None\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class SimpleLinearModel(nn.Module):\n",
+    "    def __init__(self):\n",
+    "        super().__init__()\n",
+    "        self.w1 = nn.Linear(128, 128)\n",
+    "        self.w2 = nn.Linear(128, 256)\n",
     "\n",
+    "    def forward(self, x):\n",
+    "        out = self.w1(x)\n",
+    "        out.retain_grad()\n",
+    "        MarkShardingFunction.apply(out, (None, 'a'))\n",
+    "        out = self.w2(out)\n",
+    "        return out"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "DEBUG running forward\n"
+     ]
+    }
+   ],
+   "source": [
+    "model = SimpleLinearModel()\n",
+    "model = model.to(torch.bfloat16).to('xla')\n",
+    "x = torch.randn((10, 128), dtype=torch.bfloat16).to('xla')\n",
+    "y = model(x)\n",
+    "labels = torch.ones((10, 256), dtype=torch.bfloat16).to('xla')\n",
+    "loss_func = nn.MSELoss()\n",
+    "loss = loss_func(y, labels)\n",
+    "loss.backward()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Use the custom function\n",
     "x = torch.randn(8, 8, requires_grad=True)\n",
     "x = x.to('xla')\n",
-    "mark_sharding = MarkShardingFunction.apply  # Shortcut to call the function\n",
-    "mesh = xs.get_1d_mesh('a')\n",
-    "xs.set_global_mesh(mesh)\n",
     "partition_spec = ('a', None)\n",
     "z = x@x\n",
     "z.retain_grad()\n",
-    "y = mark_sharding(z, partition_spec)  # Forward pass\n",
+    "y = MarkShardingFunction.apply (z, partition_spec)  # Forward pass\n",
     "t = y.sum()\n",
     "t.backward()\n",
     "print(torch_xla._XLAC._get_xla_tensors_hlo([z.grad]))\n",
@@ -105,68 +128,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "module_0037.SyncTensorsGraph.28.after_codegen.txt\n",
-      "module_0037.SyncTensorsGraph.28.after_optimizations-buffer-assignment.txt\n",
-      "module_0037.SyncTensorsGraph.28.after_optimizations-memory-usage-report.txt\n",
-      "module_0037.SyncTensorsGraph.28.after_optimizations.txt\n",
-      "module_0037.SyncTensorsGraph.28.after_optimizations_after_buffer_assignment.txt\n",
-      "module_0037.SyncTensorsGraph.28.after_optimizations_before_buffer_assignment.txt\n",
-      "module_0037.SyncTensorsGraph.28.before_optimizations.txt\n",
-      "module_0037.SyncTensorsGraph.28.execution_options.txt\n",
-      "module_0037.SyncTensorsGraph.28.flagfile\n",
-      "module_0037.SyncTensorsGraph.28.hlo_module_config.txt\n",
-      "module_0037.SyncTensorsGraph.28.target_arguments.txt\n",
-      "module_0037.SyncTensorsGraph.28.tpu_comp_env.txt\n",
-      "module_0037.SyncTensorsGraph.28.transfer_stats.txt\n",
-      "module_0041.ReplicateShardedData.6.after_codegen.txt\n",
-      "module_0041.ReplicateShardedData.6.after_optimizations-buffer-assignment.txt\n",
-      "module_0041.ReplicateShardedData.6.after_optimizations-memory-usage-report.txt\n",
-      "module_0041.ReplicateShardedData.6.after_optimizations.txt\n",
-      "module_0041.ReplicateShardedData.6.after_optimizations_after_buffer_assignment.txt\n",
-      "module_0041.ReplicateShardedData.6.after_optimizations_before_buffer_assignment.txt\n",
-      "module_0041.ReplicateShardedData.6.before_optimizations.txt\n",
-      "module_0041.ReplicateShardedData.6.execution_options.txt\n",
-      "module_0041.ReplicateShardedData.6.flagfile\n",
-      "module_0041.ReplicateShardedData.6.hlo_module_config.txt\n",
-      "module_0041.ReplicateShardedData.6.target_arguments.txt\n",
-      "module_0041.ReplicateShardedData.6.tpu_comp_env.txt\n",
-      "module_0041.ReplicateShardedData.6.transfer_stats.txt\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "!ls ../hlo"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "HloModule ReplicateShardedData.6, entry_computation_layout={(f32[8,8]{1,0:T(2,128)})->f32[8,8]{1,0:T(8,128)}}, num_partitions=4\n",
-      "\n",
-      "ENTRY ReplicateShardedData.6 {\n",
-      "  p0.1 = f32[8,8]{1,0} parameter(0), sharding={devices=[4,1]0,1,2,3}\n",
-      "  constant.2 = s32[] constant(0), sharding={replicated}\n",
-      "  convert.3 = f32[] convert(constant.2), sharding={replicated}\n",
-      "  broadcast.4 = f32[8,8]{1,0} broadcast(convert.3), dimensions={}, sharding={replicated}\n",
-      "  ROOT add.5 = f32[8,8]{1,0} add(p0.1, broadcast.4), sharding={replicated}\n",
-      "}\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "!cat ../hlo/module_0041.ReplicateShardedData.6.before_optimizations.txt"
    ]
