Add compile step to pjrt experiments

--- a/pjrt_experiments.ipynb
+++ b/pjrt_experiments.ipynb
@@ -64,15 +64,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "add21074",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Metric: CompileTime\n",
+      "  TotalSamples: 1\n",
+      "  Accumulator: 078ms537.466us\n",
+      "  Percentiles: 1%=078ms537.466us; 5%=078ms537.466us; 10%=078ms537.466us; 20%=078ms537.466us; 50%=078ms537.466us; 80%=078ms537.466us; 90%=078ms537.466us; 95%=078ms537.466us; 99%=078ms537.466us\n",
+      "Metric: TransferToDeviceTime\n",
+      "  TotalSamples: 2\n",
+      "  Accumulator: 229.360us\n",
+      "  ValueRate: 001.513us / second\n",
+      "  Rate: 0.0131929 / second\n",
+      "  Percentiles: 1%=089.540us; 5%=089.540us; 10%=089.540us; 20%=089.540us; 50%=139.820us; 80%=139.820us; 90%=139.820us; 95%=139.820us; 99%=139.820us\n",
+      "Metric: TransferFromDeviceTime\n",
+      "  TotalSamples: 1\n",
+      "  Accumulator: 004ms557.600us\n",
+      "  Percentiles: 1%=004ms557.600us; 5%=004ms557.600us; 10%=004ms557.600us; 20%=004ms557.600us; 50%=004ms557.600us; 80%=004ms557.600us; 90%=004ms557.600us; 95%=004ms557.600us; 99%=004ms557.600us\n",
+      "Counter: MarkStep\n",
+      "  Value: 1\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "t2 = torch.randn(4,4, device='xla:0')\n",
     "\n",
     "t3 = t1 + t2\n",
-    "torch_xla.sync()"
+    "torch_xla.sync()\n",
+    "print(met.short_metrics_report())"
    ]
   }
  ],
